Perkin-UAT/force-app/main/default/objects/Demo_Log__c/Demo_Log__c.object-meta.xml
<CustomObject>
    <label>Demo Log</label>
    <nameField>
        <displayFormat>INF-RML-{000000000}</displayFormat>
        <label>Demo Request No#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>