Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Activity_INF__c.field-meta.xml
<CustomField>
    <fullName>Activity_INF__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Workshop/Pilot</fullName>
            </value>
            <value>
                <fullName>Customer Outreach</fullName>
            </value>
            <value>
                <fullName>Conference/Webinar/Seminar</fullName>
            </value>
            <value>
                <fullName>Presentation/Discussion</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>RFP/RFI/RFQ</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Followup</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Win/Loss Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>