Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Days__c</fullName>
    <formula>IF( ISPICKVAL(Status_INF__c, &quot;Completed&quot;), Completion_Date_INF__c - Scheduled_Date_INF__c , 
IF( ISPICKVAL(Status_INF__c, &quot;Cancelled&quot;), 0, 
DATETIMEVALUE(TODAY ())- CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>