Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dylan Fung</fullName>
            </value>
            <value>
                <fullName>Daniel Ubilla</fullName>
            </value>
            <value>
                <fullName>Emmanuel Escalante</fullName>
            </value>
            <value>
                <fullName>Demo Center</fullName>
                <default>true</default>
                <label>Demo Center</label>
            </value>
            <value>
                <fullName>Edgardo Gutierrez</fullName>
                <isActive>false</isActive>
                <label>Edgardo Gutierrez</label>
            </value>
            <value>
                <fullName>Franklin Jimenez</fullName>
                <isActive>false</isActive>
                <label>Franklin Jimenez</label>
            </value>
            <value>
                <fullName>John Baker</fullName>
                <isActive>false</isActive>
                <label>John Baker</label>
            </value>
            <value>
                <fullName>Luis Diaz</fullName>
                <isActive>false</isActive>
                <label>Luis Diaz</label>
            </value>
            <value>
                <fullName>Stepan Churukanov</fullName>
                <isActive>false</isActive>
                <label>Stepan Churukanov</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>