Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective__c</fullName>
    <label>Business Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>