Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for creating Demo Logs from the Campaign obj - listing them on Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Demo Log</relationshipLabel>
    <relationshipName>Demo_Log</relationshipName>
    <type>Lookup</type>
</CustomField>