Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Completion_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_INF__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>