Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Date_for_Demo_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Demo_Pilot__c</fullName>
    <formula>Parent_Demo__r.Scheduled_Date_INF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date for Demo/Pilot</label>
    <type>Date</type>
</CustomField>