Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <label>Customer Pain Points</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>