Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Default_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Status__c</fullName>
    <label>Default Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>