Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Demo_Lead_Email_INF__c.field-meta.xml
<CustomField>
    <fullName>Demo_Lead_Email_INF__c</fullName>
    <label>Demo Lead Email</label>
    <type>Email</type>
</CustomField>