Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Demo_Lead_INF__c.field-meta.xml
<CustomField>
    <fullName>Demo_Lead_INF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demo_Request</relationshipName>
    <type>Lookup</type>
</CustomField>