Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Demo_Location__c.field-meta.xml
<CustomField>
    <fullName>Demo_Location__c</fullName>
    <label>Demo Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Location(On-Site)</fullName>
            </value>
            <value>
                <fullName>Remote(Web)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>