Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Demo_Notes_INF__c.field-meta.xml
<CustomField>
    <fullName>Demo_Notes_INF__c</fullName>
    <label>Demo Report</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>