Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Demo_Site__c.field-meta.xml
<CustomField>
    <fullName>Demo_Site__c</fullName>
    <label>Demo Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Site</fullName>
                <default>true</default>
                <label>Customer Site</label>
            </value>
            <value>
                <fullName>Waltham Technical Center</fullName>
            </value>
            <value>
                <fullName>Atlanta Technical Center</fullName>
            </value>
            <value>
                <fullName>Oakbrook Technical Center</fullName>
            </value>
            <value>
                <fullName>Shelton Technical Center</fullName>
            </value>
            <value>
                <fullName>Jorgenson Machinery/ PKI Houston</fullName>
            </value>
            <value>
                <fullName>Woodbridge Technical Center</fullName>
            </value>
            <value>
                <fullName>Japan Demo Lab</fullName>
            </value>
            <value>
                <fullName>Colorado State University Demo Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>