Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Discovery_Agreement_Posted__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Agreement_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Agreement Posted</label>
    <type>Checkbox</type>
</CustomField>