Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Level_img_inf__c.field-meta.xml
<CustomField>
    <fullName>Level_img_inf__c</fullName>
    <formula>IMAGE(
CASE(Level_INF__c,
&quot;3&quot;,&quot;/img/samples/light_red.gif&quot;,
&quot;2&quot;,&quot;img/samples/light_yellow.gif&quot;,
&quot;1&quot;,&quot;img/samples/light_green.gif&quot;,&quot;&quot;),
&quot;Level&quot;)</formula>
    <label>Level</label>
    <type>Text</type>
</CustomField>