Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Level_INF__c.field-meta.xml
<CustomField>
    <fullName>Level_INF__c</fullName>
    <inlineHelpText>Estimated effort. Level 1 (&lt;1 day), 2 (1-2 days) 3 (&gt;2 days)</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>