Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Long_term_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Long_term_Objectives__c</fullName>
    <label>Long term Objectives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>