Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N30000001GFdsEAG</relationshipName>
    <type>Lookup</type>
</CustomField>