Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>