Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <label>Operating system required instead of OS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MS 2008 R2 64bit</fullName>
            </value>
            <value>
                <fullName>MS 2012 R2 64bit</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>