Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Parent_Demo__c.field-meta.xml
<CustomField>
    <fullName>Parent_Demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Demo</label>
    <referenceTo>Demo_Log__c</referenceTo>
    <relationshipLabel>System Request</relationshipLabel>
    <relationshipName>System_Demo_Log</relationshipName>
    <type>Lookup</type>
</CustomField>