Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Potential_Demo_Dates__c.field-meta.xml
<CustomField>
    <fullName>Potential_Demo_Dates__c</fullName>
    <label>Potential Demo Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>