Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Primary_Product_INF__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_INF__c</fullName>
    <label>Primary Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attivio</fullName>
            </value>
            <value>
                <fullName>CAFÉ  - Medical Review</fullName>
            </value>
            <value>
                <fullName>CAFÉ - RBM</fullName>
            </value>
            <value>
                <fullName>CAFÉ - RWE</fullName>
            </value>
            <value>
                <fullName>ChemDraw</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>E-Notebook Biology</fullName>
            </value>
            <value>
                <fullName>E-Notebook Chemistry</fullName>
            </value>
            <value>
                <fullName>E-Notebook Formulations</fullName>
            </value>
            <value>
                <fullName>iLab</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Inventory Ent</fullName>
            </value>
            <value>
                <fullName>Lead Discovery</fullName>
            </value>
            <value>
                <fullName>Lead Discovery Premium</fullName>
            </value>
            <value>
                <fullName>LimsLink</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Signals Clinical</fullName>
            </value>
            <value>
                <fullName>Signals Data Factory</fullName>
            </value>
            <value>
                <fullName>Signals Lead Discovery</fullName>
            </value>
            <value>
                <fullName>Signals Medical Review</fullName>
            </value>
            <value>
                <fullName>Signals Notebook</fullName>
            </value>
            <value>
                <fullName>Signals Notebook - Biology</fullName>
            </value>
            <value>
                <fullName>Signals Notebook - Chemistry</fullName>
            </value>
            <value>
                <fullName>Signals Notebook for ChemDraw</fullName>
            </value>
            <value>
                <fullName>Signals Screening</fullName>
            </value>
            <value>
                <fullName>Signals Translational</fullName>
            </value>
            <value>
                <fullName>Spotfire Biology</fullName>
            </value>
            <value>
                <fullName>Spotfire Chemistry</fullName>
            </value>
            <value>
                <fullName>Spotfire Clinical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>