Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Other Products of Interest</label>
    <length>32</length>
    <type>Text</type>
</CustomField>