Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Product_Family_Demo__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Demo__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-NEO</fullName>
            </value>
            <value>
                <fullName>02-PRE</fullName>
            </value>
            <value>
                <fullName>03-DIA</fullName>
            </value>
            <value>
                <fullName>04-AA</fullName>
            </value>
            <value>
                <fullName>05-ICP</fullName>
            </value>
            <value>
                <fullName>06-MAS</fullName>
            </value>
            <value>
                <fullName>07-TEA</fullName>
            </value>
            <value>
                <fullName>08-GC</fullName>
            </value>
            <value>
                <fullName>09-LC</fullName>
            </value>
            <value>
                <fullName>10-IR</fullName>
            </value>
            <value>
                <fullName>11-UVS</fullName>
            </value>
            <value>
                <fullName>12-ESS</fullName>
            </value>
            <value>
                <fullName>13-AWS</fullName>
            </value>
            <value>
                <fullName>14-SPS</fullName>
            </value>
            <value>
                <fullName>15-APS</fullName>
            </value>
            <value>
                <fullName>16-RRD</fullName>
            </value>
            <value>
                <fullName>17-MLD</fullName>
            </value>
            <value>
                <fullName>18-CSA</fullName>
            </value>
            <value>
                <fullName>19-LVI</fullName>
            </value>
            <value>
                <fullName>20-ANP</fullName>
            </value>
            <value>
                <fullName>21-PGI</fullName>
            </value>
            <value>
                <fullName>22-HTS</fullName>
            </value>
            <value>
                <fullName>23-RRS</fullName>
            </value>
            <value>
                <fullName>24-MOL</fullName>
            </value>
            <value>
                <fullName>25-DIS</fullName>
            </value>
            <value>
                <fullName>26 - OneSource</fullName>
            </value>
            <value>
                <fullName>27 - MDX</fullName>
            </value>
            <value>
                <fullName>28 - NTD</fullName>
            </value>
            <value>
                <fullName>29 - PBR</fullName>
            </value>
            <value>
                <fullName>30-RAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>