Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Request_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_INF__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>