Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Request_Details_INF__c.field-meta.xml
<CustomField>
    <fullName>Request_Details_INF__c</fullName>
    <label>Request Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>