Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Scheduled_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_INF__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>