Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Strategic_Market__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Market__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity__c)), TEXT(Opportunity__r.Strategic_Market_INF__c),&#39;&#39;)</formula>
    <label>Strategic Market</label>
    <type>Text</type>
</CustomField>