Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/System_Configuration__c.field-meta.xml
<CustomField>
    <fullName>System_Configuration__c</fullName>
    <label>System Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>