Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/System_Days_Active__c.field-meta.xml
<CustomField>
    <fullName>System_Days_Active__c</fullName>
    <label>System Days Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>120 days</fullName>
            </value>
            <value>
                <fullName>150 days</fullName>
            </value>
            <value>
                <fullName>180 days</fullName>
            </value>
            <value>
                <fullName>Retire</fullName>
            </value>
            <value>
                <fullName>15 days</fullName>
            </value>
            <value>
                <fullName>360 days</fullName>
                <isActive>false</isActive>
                <label>360 days</label>
            </value>
            <value>
                <fullName>7 days</fullName>
                <isActive>false</isActive>
                <label>7 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>