Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/System_OppId__c.field-meta.xml
<CustomField>
    <fullName>System_OppId__c</fullName>
    <formula>Opportunity__r.Id</formula>
    <label>System OppId</label>
    <type>Text</type>
</CustomField>