Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/System_Owner__c.field-meta.xml
<CustomField>
    <fullName>System_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demo_Log</relationshipName>
    <type>Lookup</type>
</CustomField>