Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/System_Purpose__c.field-meta.xml
<CustomField>
    <fullName>System_Purpose__c</fullName>
    <label>System Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Internal Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>