Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/System_s_IP__c.field-meta.xml
<CustomField>
    <fullName>System_s_IP__c</fullName>
    <label>System&#39;s IP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>