Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/System_s_Name__c.field-meta.xml
<CustomField>
    <fullName>System_s_Name__c</fullName>
    <label>System&#39;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>