Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENotebook 2014 R6 + COE 12.6.2 OOTB [C1262E2014R6Tem]</fullName>
            </value>
            <value>
                <fullName>ENotebook 2014 R5.1 + COE 12.6.2 (190) [EUC1261E2014Tem]</fullName>
            </value>
            <value>
                <fullName>European CBOE 12.5.1 + EN 12.1.X System (165) [EUCOE125D1]</fullName>
            </value>
            <value>
                <fullName>CBOE 12.5.1 + ELN 12.1.X OOTB [CRCOE1251Tem]</fullName>
            </value>
            <value>
                <fullName>Win 2012 + Ora 11g R2 clean [W2012ORA11Tem]</fullName>
            </value>
            <value>
                <fullName>Win 2008 + Ora 11g R2 clean [W2K8R2ORA]</fullName>
            </value>
            <value>
                <fullName>Win 2012 clean [W2012Tem]</fullName>
            </value>
            <value>
                <fullName>Win 2008 clean [WIN2K8R2Tem]</fullName>
            </value>
            <value>
                <fullName>Win 2008 + MSSQL 2008 clean [W2K8R2MSSQL]</fullName>
            </value>
            <value>
                <fullName>Win 2008 + Ms SharePoint Foundation [AMESHRPNTD120]</fullName>
            </value>
            <value>
                <fullName>Spotfire Server [Advise version and add-ons required]</fullName>
            </value>
            <value>
                <fullName>New system [Please specify at the comment your needs]</fullName>
            </value>
            <value>
                <fullName>AWS New System [Please specify at the comment your needs]</fullName>
            </value>
            <value>
                <fullName>System Configuration [Please specify at the comment your needs]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>