Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Parked</fullName>
            </value>
            <value>
                <fullName>Internal Use</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Cloud Parked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>