Perkin-UAT/force-app/main/default/objects/Demo_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instrument Demonstration</fullName>
                <default>true</default>
                <label>Instrument Demonstration</label>
            </value>
            <value>
                <fullName>Training-PKI</fullName>
            </value>
            <value>
                <fullName>Training-Customer</fullName>
            </value>
            <value>
                <fullName>Reagent Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>