Perkin-UAT/force-app/main/default/objects/Demo_Log__c/recordTypes/Informatics.recordType-meta.xml
<RecordType>
    <fullName>Informatics</fullName>
    <active>true</active>
    <label>Informatics</label>
</RecordType>