Perkin-UAT/force-app/main/default/objects/Demo_Log__c/recordTypes/System_Request.recordType-meta.xml
<RecordType>
    <fullName>System_Request</fullName>
    <active>true</active>
    <label>System Request</label>
</RecordType>