Perkin-UAT/force-app/main/default/objects/Demo_Log__c/validationRules/Assigned_To_Mandatory_During_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_To_Mandatory_During_Update</fullName>
    <active>false</active>
    <description>Ensuring Assigned To field has value during Update.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), 
OR(ISPICKVAL(Assigned_To__c,&quot;&quot;), 
         ISPICKVAL(Assigned_To__c,&quot;Demo Center&quot;)),
 RecordType.Name = &#39;System Request&#39;)</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>V.RULE_DEMO_LOG: 002 Kindly update Assigned To with value other than Demo Center before Saving the record.</errorMessage>
</ValidationRule>