Perkin-UAT/force-app/main/default/objects/Demo_Log__c/listViews/Informatics_Demo_Log.listView-meta.xml
<ListView>
    <fullName>Informatics_Demo_Log</fullName>
    <columns>NAME</columns>
    <columns>Demo_Date__c</columns>
    <columns>Demo_Log_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Demo_Log__c.Informatics</value>
    </filters>
    <label>Informatics Demo Log</label>
</ListView>